Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "#Your code here\n",
     "import pandas as pd\n",
-    "imp"
+    "from sklearn.model_selection import tra"
    ]
   },
   {
