--- a/index.ipynb
+++ b/index.ipynb
@@ -34,7 +34,8 @@
    "source": [
     "#Your code here\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import tra"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics im"
    ]
   },
   {
