--- a/index.ipynb
+++ b/index.ipynb
@@ -35,7 +35,8 @@
     "#Your code here\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics im"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from "
    ]
   },
   {
