--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,8 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import roc"
+    "from sklearn.metrics import roc_curve, auc\n",
+    "from matplotlib"
    ]
   },
   {
