--- a/index.ipynb
+++ b/index.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('creditcard.csv.gz')"
+    "df = pd.read_csv('creditcard.csv.gz', compression='gi')"
    ]
   },
   {
