Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -42,11 +42,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('creditcard.csv.gz', compression='gzip')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('creditcard.csv.gz', compression='gi')"
+    "d."
    ]
   },
   {
