--- a/index.ipynb
+++ b/index.ipynb
@@ -190,12 +190,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    284315\n",
+       "1       492\n",
+       "Name: Class, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "df.c"
+    "df.Class.value_counts()"
    ]
   },
   {
