Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "X = df.drop()"
+    "X = df.drop('Class', axis=1)\n",
+    "y = df.Class"
    ]
   },
   {
