Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,13 +222,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
     "X = df.drop('Class', axis=1)\n",
     "y = df.Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_test_split"
    ]
   },
   {
