--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_test_split()"
+    "X_train, X_test, y_train, y"
    ]
   },
   {
