--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X,y,test)"
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.25, random)"
    ]
   },
   {
