--- a/index.ipynb
+++ b/index.ipynb
@@ -233,11 +233,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.25, random)"
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.25, random_state=0)"
    ]
   },
   {
