--- a/index.ipynb
+++ b/index.ipynb
@@ -251,11 +251,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "model = LogisticRegression()\n",
+    "mo"
    ]
   },
   {
