Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,7 @@
    "source": [
     "#Your code here\n",
     "model = LogisticRegression()\n",
-    "mo"
+    "model.fit(X,y)"
    ]
   },
   {
