--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_score = "
+   ]
   },
   {
    "cell_type": "markdown",
