Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -279,7 +279,7 @@
    "source": [
     "#Your code here\n",
     "model = LogisticRegression()\n",
-    "model.fit(X,y)"
+    "model.fit(X_t,y)"
    ]
   },
   {
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_score = "
+    "y_score = model.decision_function(y_)"
    ]
   },
   {
