Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -279,7 +279,7 @@
    "source": [
     "#Your code here\n",
     "model = LogisticRegression()\n",
-    "model.fit(X_t,y)"
+    "model.fit(X_train,y_train)"
    ]
   },
   {
