Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
    "outputs": [],
    "source": [
     "y_score = model.decision_function(y_test)\n",
-    "fpr, tpr, threshold = "
+    "fpr, tpr, threshold = roc_curve(y_test,)"
    ]
   },
   {
