Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train,y_train)\n",
+    "y_score = model.decision_function(X_test)\n",
+    "fpr, tpr, threshold = roc_curve(y_test, y_score)\n",
+    "plt.plot(fpr,tpr);"
    ]
   },
   {
