--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "from imblearn im"
    ]
   },
   {
