Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -371,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SMOTE().fit(X)"
+    "balance_XSMOTE().fit(X_train,y_train)"
    ]
   },
   {
