Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -383,7 +383,7 @@
     }
    ],
    "source": [
-    "X_train_balanced, y_train_balanced = SMOTE().fit(X_train,y_train)"
+    "X_train_balanced, y_train_balanced = SMOTE().fit_sample(X_train,y_train)"
    ]
   },
   {
