Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -380,6 +380,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = LogisticRegression(class_weight='balanced')\n",
+    "model.fit(X_train,y_train)\n",
     "y_score = model.decision_function(X_test)\n",
     "fpr, tpr, threshold = roc_curve(y_test, y_score)\n",
     "plt.plot(fpr,tpr);"
