Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -378,10 +378,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "model = LogisticRegression(class_weight='balanced')\n",
-    "model.fit(X_train,y_train)\n",
+    "model.fit(X_train_balanced,y_train_balanced)\n",
     "y_score = model.decision_function(X_test)\n",
     "fpr, tpr, threshold = roc_curve(y_test, y_score)\n",
     "plt.plot(fpr,tpr);"
