Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -303,7 +303,8 @@
    "source": [
     "y_score = model.decision_function(X_test)\n",
     "fpr, tpr, threshold = roc_curve(y_test, y_score)\n",
-    "plt.plot(fpr,tpr);"
+    "plt.plot(fpr,tpr)\n",
+    "plt.show()\n"
    ]
   },
   {
