--- a/index.ipynb
+++ b/index.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9650181011601625\n"
+      "auc: 0.9650181011601625\n"
      ]
     }
    ],
@@ -312,7 +312,7 @@
     "fpr, tpr, threshold = roc_curve(y_test, y_score)\n",
     "plt.plot(fpr,tpr)\n",
     "plt.show()\n",
-    "print(auc(fpr,tpr))"
+    "print('auc:',auc(fpr,tpr))"
    ]
   },
   {
