--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -345,6 +345,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "auc: 0.9841101357118069\n"
+     ]
     }
    ],
    "source": [
@@ -353,7 +360,9 @@
     "model.fit(X_train,y_train)\n",
     "y_score = model.decision_function(X_test)\n",
     "fpr, tpr, threshold = roc_curve(y_test, y_score)\n",
-    "plt.plot(fpr,tpr);"
+    "plt.plot(fpr,tpr)\n",
+    "plt.show()\n",
+    "print('auc:',auc(fpr,tpr))"
    ]
   },
   {
