Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -414,6 +414,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "auc: 0.9650181011601625\n"
+     ]
     }
    ],
    "source": [
@@ -421,7 +428,9 @@
     "model.fit(X_train_balanced,y_train_balanced)\n",
     "y_score = model.decision_function(X_test)\n",
     "fpr, tpr, threshold = roc_curve(y_test, y_score)\n",
-    "plt.plot(fpr,tpr);"
+    "plt.plot(fpr,tpr)\n",
+    "plt.show()\n",
+    "print('auc:',auc(fpr,tpr))"
    ]
   },
   {
